<resources>
    <string name="app_name">AndroidAnimations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Animations</string>
    <string name="nav_header_subtitle">Sample app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="anim_list">AnimationList</string>
    <string name="animations">Animations</string>
    <string name="animator">ObjectAnimator</string>
    <string name="vector">VectorAnimation</string>
    <string name="lottie">Lottie</string>
    <string name="keyframes">Keyframes</string>
    <string name="physics">DynamicAnimation</string>
    <string name="layTrans">LayoutTransitions</string>
    <string name="transFramework">TransitionFramework</string>
    <string name="fragTrans">FragmentTransition</string>
    <string name="actTrans">ActivityTransition</string>
    <string name="circle">CircleAnimations</string>
    <string name="motion">MotionLayout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
